--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,6 +2,12 @@
 ! - Bug fixed
 # - Added feature or changes
 
+1.13 XX-XX-XX
+-------------
+# Migrated to SVN repository. CVS no longer supported.
+! Fix build with gcc 4.1.0
+
+
 1.12 22-10-05
 -------------
 
