--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@
 -------------
 # Migrated to SVN repository. CVS no longer supported.
 ! Fix build with gcc 4.1.0
-
+! Fix build with ENABLE_SCRIPTS=1 when Perl 5.8+ installed
 
 1.12 22-10-05
 -------------
