--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
-Fix @MsgRoutedVia macros.
-Extend script subsystem.
-Fix build with ENABLE_SCRIPTS=1 on Win32 and OS/2
-Allow write to PKT base.
-Rewrite makefiles
-Fix @MsgLoops, @MaxAge and @MaxAttachSize macroses
+$Id$
+
+* Fix @MsgRoutedVia macros.
+* Extend script subsystem.
+* Fix build with ENABLE_SCRIPTS=1 on Win32 and OS/2
+* Allow write to PKT base.
+* Rewrite makefiles
+* Fix @MsgLoops, @MaxAge and @MaxAttachSize macroses
+* Use installed smapi library, not in source tree
