--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -4,6 +4,11 @@
 ! - Bug fixed
 # - Added feature or changes
 
+1.26 2011-02-08
+---------------
+# New log level 3 "Notice" for messages without action ("Scanning...",
+  "Skip...", "Ignore...", "...not used" & etc.)
+# Update manual (described nuances works with the attached files)
 ! Fix build on unix-like OS using GNU C 4.x
 
 1.25 2011-02-04
