--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,10 @@
 Authors:
 --------
 
-Stas Degteff 2:5080/102@fidonet, <stas_degteff@users.sourceforge.net> (project coordinator in 2007 year)
+Stas Degteff 2:5080/102@fidonet, <stas_degteff@users.sourceforge.net> (project coordinator since 2007)
 Alex Soukhotine 2:5030/1157@fidonet, <ph0enix@users.sourceforge.net> (project coordinator)
 
+Michael Dukelsky 2:5020/1042@fidonet, <dukelsky@users.sourceforge.net> (various fixes)
 Andrey V. Stolyarov <croco@croco.net> (Alternative CONTAINER template library - a_list.hpp)
 Alexander S. Aganichev <aaganichev@yandex.ru>, <asa@eed.miee.ru> (porting to DJGPP/MINGW32/EMX and small fixes)
 Alexey Wasilyev 2:5053/40.1@fidonet (porting this stuff to AIX)
