--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -4,6 +4,34 @@
 ! - Bug fixed
 # - Added feature or changes
 
+1.36 2018-08-25 (Subversion rev.174)
+-----------------------------------
+! Fix a bug in not deleting a flag after ScanDir of an empty base.
+  Bug report by Alex Barinov 2:5020/715
+
+1.35 2018-08-25 (Subversion rev.172)
+-----------------------------------
+! Fix a bug in setting message attributes.
+  Bug report by Alex Barinov 2:5020/715
+
+1.34 2018-08-25 (Subversion rev.171)
+-----------------------------------
+! Gentoo linux: fix repository path in layman config
+! Share presence check. Patch by Max Vasilyev 2:5057/77
+# Add man page to linux makefile
+# Add rntrack.spec for .rpm build
+! Remove recursion in a makefile variable definition.
+  Thanks to Benny Pedersen 2:230/38
+! Change deprecated AM_PROG_INSTALL macro for AC_PROG_INSTALL one
+! Fix erroneously overwriting timesRead msg field with a point number
+
+1.33 2013-01-08 (Subversion rev.161)
+-----------------------------------
+! DJGPP makefile fixed. Patch by Max Vasilyev 2:5057/77
+! Mingw32 makefile was fixed for the case with no scripts support
+# Gentoo linux ebuild
+! An incorrect log message for Action: AddNote was fixed
+
 1.32 2011-04-26 (Subversion rev.156)
 -----------------------------------
 # Some editorial changes in the manual
