--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -4,6 +4,10 @@
 ! - Bug fixed
 # - Added feature or changes
 
+1.38 2019-06-08 (Subversion rev.180)
+-----------------------------------
+! Fix dereferencing type-punned pointer breaking strict-aliasing rules.
+
 1.37 2019-06-07 (Subversion rev.179)
 -----------------------------------
 ! Fix build under FreeBSD 12.0. Patch by andrew clarke 3:633/267.
