--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,8 @@
 
 1.38 2019-06-08 (Subversion rev.180)
 -----------------------------------
-! Fix dereferencing type-punned pointer breaking strict-aliasing rules.
+! Fix similar issue in sqbase.cpp.
+! Fix dereferencing type-punned pointer breaking strict-aliasing rules in api_sdm.c.
 
 1.37 2019-06-07 (Subversion rev.179)
 -----------------------------------
