--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -4,8 +4,9 @@
 ! - Bug fixed
 # - Added feature or changes
 
-1.38 2019-06-08 (Subversion rev.180)
+1.38 2019-06-08 (Subversion rev.182)
 -----------------------------------
+! Fix conversion from string constant to ‘char*’
 ! Fix similar issue in sqbase.cpp.
 ! Fix dereferencing type-punned pointer breaking strict-aliasing rules in api_sdm.c.
 
