--- a/README
+++ b/README
@@ -20,7 +20,7 @@ echomail.
      -------------
      The doc and samples subdirectories contain documentation. You may also
 subscribe to RU.FTRACK Fidonet echo area (in Russian) and visit project's web page
-http://sourceforge.net/projects/ftrack-as.
+https://sourceforge.net/projects/ftrack-as/
 
      Bug reporting
      -------------
@@ -29,7 +29,7 @@ http://sourceforge.net/projects/ftrack-as.
      License
      -------
      RNTrack is free software. It's licensed using GNU General Public License.
-See COPYING to text of license (or visits http://gnu.org if this file is
+See COPYING to text of license (or visit https://www.gnu.org if this file is
 missing).
 
      Authors
